Overflowing player summary fix
Came to a compromise with overflowing player summaries when players have ridiculously long names - removed the set width but added a maximum width, at which point it will cut the name off.

--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,7 @@ main{
     box-sizing: border-box;
 
     display: grid; 
-    grid-template-columns: 275px 1fr 240px; 
+    grid-template-columns: 275px 1fr min-content; 
     grid-template-rows: 160px 1fr; 
     gap: 20px 20px; 
     grid-template-areas: 
@@ -1461,8 +1461,10 @@ $jailAnimationLength: 1.5;
 
     h2{
         margin: 0;
-        font-size: 1.1em;
+        font-size: 1em;
         text-transform: uppercase;
+        max-width: 200px;
+        //word-break: break-all;
     }
 
     & > div{
@@ -1470,8 +1472,9 @@ $jailAnimationLength: 1.5;
         //flex-grow: 1;
         flex-shrink: 1;
         flex-basis: 200px;
-        max-width: 200px;
+        //max-width: 200px;
         padding: 10px;
+        min-width: 200px;
     }
 
     div{
@@ -1488,12 +1491,13 @@ $jailAnimationLength: 1.5;
 
 .player-summary-header{
     display: grid;
-    grid-template-columns: 50px auto;
+    grid-template-columns: 35px auto;
     grid-template-rows: auto auto;
     text-align: left;
-    grid-column-gap: 16px;
+    grid-column-gap: 10px;
     border: $border;
     padding: 5px 10px;
+    overflow: hidden;
 
     .player-token-icon{
         background-size: contain;
@@ -1503,7 +1507,7 @@ $jailAnimationLength: 1.5;
         position: relative;
         //background-color: #fff;
         height: 50px;
-        background-size: 40px;
+        background-size: contain;
         top: 50%;
         margin-top: -25px;
         position: relative;
@@ -1665,6 +1669,7 @@ $jailAnimationLength: 1.5;
 .individual-player-summary{
     transition: 0.5s;
     max-height: 700px;
+
 }
 
 
